<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/background">

	<ImageView
		android:id="@+id/profile_picture"
		android:layout_width="120dp"
		android:layout_height="120dp"
		android:layout_marginTop="120dp"
		android:background="@drawable/button_corner"
		android:contentDescription="@string/success_profile_picture"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/title_success"
		style="@style/Title"
		android:layout_marginTop="30dp"
		android:minHeight="50dp"
		android:text="@string/deposit_success_title"
		app:layout_constraintEnd_toEndOf="@+id/profile_picture"
		app:layout_constraintStart_toStartOf="@+id/profile_picture"
		app:layout_constraintTop_toBottomOf="@+id/profile_picture" />

	<TextView
		android:id="@+id/auth_balance"
		style="@style/Title"
		android:layout_marginTop="10dp"
		android:text="@string/deposit_success_subtitle"
		app:layout_constraintEnd_toEndOf="@+id/title_success"
		app:layout_constraintStart_toStartOf="@+id/title_success"
		app:layout_constraintTop_toBottomOf="@+id/title_success" />

	<LinearLayout
		android:layout_width="300dp"
		android:layout_height="60dp"
		android:layout_marginTop="30dp"
		android:weightSum="2"
		app:layout_constraintEnd_toEndOf="@+id/auth_balance"
		app:layout_constraintStart_toStartOf="@+id/auth_balance"
		app:layout_constraintTop_toBottomOf="@+id/auth_balance">

		<TextView
			android:id="@+id/home_button"
			style="@style/ClickableText"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:text="@string/home_button"
			android:textSize="20sp" />

		<TextView
			android:id="@+id/continue_deposit_button"
			style="@style/ClickableText"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:text="@string/deposit_success_continue_deposit_button"
			android:textSize="20sp" />
	</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

