<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/card_view"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_marginHorizontal="8dp"
	android:layout_marginBottom="8dp"
	android:background="@color/light_mainColor"
	android:clickable="true"
	app:cardCornerRadius="8dp"
	app:cardElevation="0dp"
	app:contentPadding="16dp">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/card_view_content"
		android:layout_width="match_parent"
		android:layout_height="match_parent">


		<ImageView
			android:id="@+id/type_transaction_image"
			android:layout_width="24dp"
			android:layout_height="24dp"
			android:contentDescription="@string/statistic_card_type_des"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:srcCompat="@drawable/button_corner" />

		<TextView
			android:id="@+id/money_transaction"
			android:layout_width="wrap_content"
			android:layout_height="24dp"
			android:layout_marginStart="8dp"
			android:gravity="center"
			android:textSize="18sp"
			android:textStyle="bold"
			app:layout_constraintEnd_toStartOf="@+id/date_transaction"
			app:layout_constraintHorizontal_bias="0.5"
			app:layout_constraintHorizontal_chainStyle="spread_inside"
			app:layout_constraintStart_toEndOf="@+id/type_transaction_image"
			app:layout_constraintTop_toTopOf="parent" />

		<TextView
			android:id="@+id/date_transaction"
			android:layout_width="wrap_content"
			android:layout_height="24dp"
			android:gravity="center"
			android:textSize="16sp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toEndOf="@+id/money_transaction"
			app:layout_constraintTop_toTopOf="parent" />

		<androidx.constraintlayout.widget.ConstraintLayout
			android:id="@+id/hidden_view"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="16dp"
			android:visibility="gone"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/type_transaction_image">

			<View
				android:id="@+id/divider"
				android:layout_width="0dp"
				android:layout_height="1dp"
				android:background="?android:attr/listDivider"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />


			<TextView
				android:id="@+id/time_transaction"
				style="@style/statistics_card_content_text"
				android:text="@string/statistics_card_time"
				app:layout_constraintBottom_toTopOf="@+id/user_transaction"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/divider" />

			<TextView
				android:id="@+id/user_transaction"
				style="@style/statistics_card_content_text"
				android:text="@string/statistic_card_user_sender"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/time_transaction" />

			<TextView
				android:id="@+id/message_transaction"
				style="@style/statistics_card_content_text"
				android:text="@string/statistics_card_message"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/user_transaction" />

			<androidx.constraintlayout.widget.ConstraintLayout
				android:id="@+id/see_more_view"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:clickable="true"
				android:visibility="gone"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/message_transaction">

				<View
					android:id="@+id/divider2"
					android:layout_width="0dp"
					android:layout_height="1dp"
					android:layout_marginTop="8dp"
					android:background="?android:attr/listDivider"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent" />

				<TextView
					android:id="@+id/see_more_text"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:gravity="center"
					android:paddingTop="16dp"
					android:text="@string/statistic_card_see_more_button"
					android:textSize="16sp"
					android:textStyle="bold"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/divider2" />
			</androidx.constraintlayout.widget.ConstraintLayout>

		</androidx.constraintlayout.widget.ConstraintLayout>

	</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
